[gd_scene load_steps=25 format=3 uid="uid://c7q57hphq4jbk"]

[ext_resource type="Script" path="res://bala_roja.gd" id="1_h67f7"]
[ext_resource type="Script" path="res://Area2Dbala_roja.gd" id="2_pgcum"]
[ext_resource type="Texture2D" uid="uid://c7fceyaepd5wn" path="res://assets/images/elements/planilla_blasts_xa_512x512_24bits.png" id="3_3nxqv"]
[ext_resource type="AudioStream" uid="uid://bcrqsaws6vsrj" path="res://assets/audio/fx/win/bullet_wall_1.ogg" id="4_ua70o"]
[ext_resource type="AudioStream" uid="uid://b61q5exb5e6p2" path="res://assets/audio/fx/win/bullet_wall_2.ogg" id="5_6083u"]
[ext_resource type="Script" path="res://Area2D2_bala_roja.gd" id="6_w32mo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5iyd"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5uxha"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_egvtx"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gw18s"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_bgjy0"]
colors = PackedColorArray(0.954058, 0.734593, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_keov4"]
gradient = SubResource("Gradient_bgjy0")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0.05)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_d51ju"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_xn23c"]
offsets = PackedFloat32Array(0, 0.103226)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rgt0m"]
gradient = SubResource("Gradient_xn23c")

[sub_resource type="Curve" id="Curve_5jl8c"]
_data = [Vector2(0, 0.516014), 0.0, 8.52778, 0, 0, Vector2(0.279661, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_prtxe"]
curve = SubResource("Curve_5jl8c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bxop1"]
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 3.31
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_prtxe")
color = Color(0.972549, 0.380392, 0, 1)
color_ramp = SubResource("GradientTexture1D_rgt0m")

[sub_resource type="Gradient" id="Gradient_8s120"]
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_10q6g"]
gradient = SubResource("Gradient_8s120")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.472934, 0.452991)
fill_to = Vector2(0.239316, 0.760684)

[sub_resource type="Animation" id="Animation_acji0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_okgfy"]
resource_name = "hit enemy"
length = 0.16667
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_een87"]
resource_name = "hit_wall"
length = 0.16667
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_48s4y"]
_data = {
"RESET": SubResource("Animation_acji0"),
"hit enemy": SubResource("Animation_okgfy"),
"hit_wall": SubResource("Animation_een87")
}

[node name="bala_roja" type="Node2D"]
script = ExtResource("1_h67f7")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_pgcum")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
light_mask = 2
visibility_layer = 2
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_n5iyd")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
z_index = 4
material = SubResource("CanvasItemMaterial_5uxha")
position = Vector2(0, 9)
texture = ExtResource("3_3nxqv")
hframes = 10
vframes = 6
frame = 7
region_enabled = true
region_rect = Rect2(0, 0, 600, 362)

[node name="Sprite2D3" type="Sprite2D" parent="Area2D"]
visible = false
z_index = 4
material = SubResource("CanvasItemMaterial_egvtx")
position = Vector2(0, 9)
texture = ExtResource("3_3nxqv")
hframes = 4
frame = 1
region_enabled = true
region_rect = Rect2(0, 340, 96, 24)

[node name="Sprite2D2" type="Sprite2D" parent="Area2D"]
visible = false
z_index = 3
material = SubResource("CanvasItemMaterial_gw18s")
position = Vector2(0, 9)
texture = ExtResource("3_3nxqv")
offset = Vector2(-10, 0)
flip_h = true
hframes = 4
frame = 1
region_enabled = true
region_rect = Rect2(0, 122.329, 283.776, 77.671)

[node name="PointLight2D" type="PointLight2D" parent="Area2D/Sprite2D2"]
position = Vector2(0, 1)
texture = SubResource("GradientTexture2D_keov4")
texture_scale = 1.91

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource("4_ua70o")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource("5_6083u")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Area2D"]
z_index = 5
material = SubResource("CanvasItemMaterial_d51ju")
position = Vector2(0, 9.8)
amount = 100
process_material = SubResource("ParticleProcessMaterial_bxop1")
texture = SubResource("GradientTexture2D_10q6g")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_48s4y")
}

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("6_w32mo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
visible = false
light_mask = 2
visibility_layer = 2
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_n5iyd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="Area2D2" to="Area2D2" method="_on_body_shape_entered"]
